--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,36 @@ body {font-family: 'Lato' !important;}
 
 .container-fluid {padding:0 !important;}
 
+.error-message {
+    font-size: 12px;
+    color: red;
+    margin-bottom: 0;
+}
+
+.payment-page label {
+    color:#000;
+    font-weight: 400 !important;
+    letter-spacing: 0.025em;
+    font-family:'Lato';
+    margin-bottom: 0;
+} 
+
+.payment-page input::placeholder {
+    color: #6b7c93;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    font-size:12px;
+}
+
+.payment-page input {
+    margin-bottom: 30px;
+}
+
 /* Header */
 .header {padding-top:30px;padding-bottom:10px;
     /* border-bottom:2px solid #48d1cc;box-shadow: 0 3px 3px rgba(0,0,0,.19); */
     border-bottom: 5px solid #6FA9B4;
+    height: 155px;
 }
 .header h1 {
     font-family:'BonVivant'; 
@@ -346,6 +372,7 @@ label.form-label {
     outline: 0
 }
 
+
 .hamburger {
     padding: 0;
     display: inline-block;
@@ -366,6 +393,7 @@ label.form-label {
     position: absolute;
     right: 0;
     top: 0.3125rem;
+    box-shadow: none;
 }
 
 .hamburger-box {
@@ -440,7 +468,41 @@ label.form-label {
     transform: translate3d(0,-1.25rem,0) rotate(-90deg)
 }
 
+.hide-popup {
+    opacity: 1;
+    display:none;
+}
 
+.popup {
+    display:block;
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.4);
+    overflow: scroll;
+    opacity: 1;
+  }
+
+.popup-inner-table div {
+    padding: 0px 50px 20px;
+    font-size: 25px;
+}
+
+  .popup-inner-table {
+      position:absolute;
+      margin-left: -500px;
+      left: 50%;
+      top: 50%;
+      background: white;
+      font-size: 14px;
+      border-radius: 5px;
+      min-width: 1000px;
+  
+  }
 
 .menu-container { 
     background: #fff;  
@@ -497,6 +559,7 @@ label.form-label {
 
 .circle-icon .circle-container {
     padding-top: 40px;
+    padding-bottom: 50px;
 }
 
 .circle-icon .circle-container .circle {
@@ -511,6 +574,7 @@ label.form-label {
     width: 100px;
     border-radius: 50%;
     box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.1);
+    background: #c5dce1;
 }
 
 .circle-icon .circle-container h4 {
@@ -525,7 +589,7 @@ label.form-label {
 .circle-icon .circle-container p {
     color: #636363;
     font-size: 16px;
-    padding: 0 25px;
+    padding: 0 75px;
 }
 
 .circle-icon .circle-info {
@@ -557,6 +621,41 @@ label.form-label {
 
     .desktoponly {
         display:none;
+    }
+ }
+
+ @media (max-width: 1330px) { 
+
+    .header .collapse-mobile {
+        /* display:none; */
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        background: #fff;
+        float: none;
+        z-index: 10000;
+        text-align: right;
+        margin-top:11px;
+        margin-bottom: 0;
+        padding-right: 0;
+        padding: 75px 50px 50px;
+        right: 0;
+        top: -30px;
+        margin-right:40px;
+    }
+
+    .header li {
+        display: block;
+        padding-bottom:10px;
+    }
+
+    .hamburger {
+        z-index:10005;
+        padding-right: 50px;
+    }
+
+    .mobileonly {
+        display:block;
     }
  }
 
@@ -626,6 +725,11 @@ label.form-label {
         padding: 75px 50px 50px;
         right: 0;
         top: -30px;
+        margin-right:10px;
+    }
+
+    .hamburger {
+        padding-right: 10px;
     }
 
     .header .collapse-mobile li {
@@ -723,32 +827,84 @@ label.form-label {
 
  }
 
- body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  body,
-  html {
-    background-color: #f6f9fc;
-    font-size: 18px;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    margin: 0;
-  }
-  
+    .testimonials {
+        background: #000220;
+        padding: 100px 0;
+        text-align: center;
+        color: #fff;
+        position:relative
+    }
+
+    .testimonials .overlay {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: url(./images/1.png) repeat left 0px;
+        background-size: initial;
+        position: absolute;
+    }
+
+    .testimonials .dark-overlay {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        background:#000;
+        opacity: 0.4;
+    }
+
+    .testimonials p {
+        font-size: 32px;
+        font-family: 'BonVivantSerif';
+        letter-spacing: 1px;
+    }
+
+    .testimonials h3 {
+        font-size: 20px;
+        font-family: 'BonVivantSerif';
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
+
+    .rotate {
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(-22deg);
+        transform: translateX(-50%) translateY(-50%) rotate(-22deg);
+    }
+   
+    .inner {
+        position: absolute;
+        top: 29%;
+        left: 17%;
+    }
+
+    .outer {
+        margin-bottom:100px;
+    }
+
+    .circle-icon h1 {
+        font-size: 60px;
+        font-family: 'BonVivant';
+        position: relative;
+        z-index: 10;
+    }
+
+    .circle-icon .blue-highlight {
+        background: #6FA9B4;
+        height: 11px;
+        opacity: .7;
+        margin-top: -20px;
+        z-index: 5;
+        position: relative;
+    }
 
   
   .DemoWrapper {
-    margin: 0 auto;
+    margin-top: 20px;
     max-width: 500px;
-    padding: 0 24px;
     display: flex;
     flex-direction: column;
-    height: 100vh;
   }
   
   .Demo {
@@ -1018,23 +1174,99 @@ and (max-device-width : 1024px)  {
     input.form-control.guest-info {
         width: 100%;
     }
+
+    .sitemap img {
+        width:300px;
+    }
 }
 
 @media screen and (min-width: 375px) and (max-width: 812px) and (orientation: landscape) {
-    .header {background:#fff;}
+    .header {
+        background:#fff;
+        height:150px;
+    }
 
+    .header li {
+        display: block;
+        padding-bottom: 15px;
+    }
+
+    .hamburger {
+        right: 22px;
+        z-index: 1100;
+    }
+    
+    .header .title {
+       padding-left: 0;
+    }
+
+    .header .collapse-mobile {
+        /* display: none; */
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        background: #fff;
+        float: none;
+        z-index: 100;
+        text-align: right;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-right: 0;
+        padding: 75px 50px 50px;
+        right: 0;
+        top: -30px;
+        z-index: 1100;
+        width: 300px;
+        height: 400px;
+    }
+
+    .header h1 {font-size: 59px;}
+    .header h2 {font-size:20px;top:63px;}
 
     .hero .box {
         width: 400px;
+        margin: 0 auto;
+        display: block;
+        position: relative;
+        right: initial;
+        top: initial;
     }
 
-    .booking-strip {flex-wrap: wrap;}
+    .hero {
+        background: url(/static/media/tree-line-1.6a115048.png) no-repeat left 0px;
+        height: 500px;
+        background-size: cover;
+    }
+
+    .hero .message {
+        display:none;
+    }
+
+    .booking-strip {
+            display: block;
+            height: auto;
+            padding: 50px 100px;
+    }
+
+    .booking-strip div {
+        margin-right: 0;
+    }
 
     input.form-control.guest-info {
         width: 100%;
     }
 
+    .carousel-button.blue {
+        margin-top: 55px;
+    }
+
+    .amenities {
+        padding: 0;
+    }
+
 }
+
+
 
 
 /* @media screen and (min-width: 375px) and (max-width: 667px) and (orientation: landscape) {
