--- a/src/style.css
+++ b/src/style.css
@@ -162,7 +162,7 @@ body {font-family: 'Lato' !important;}
 }
 
 /* Hero */
-.hero {background: url(./images/tree-line-1.png) repeat left 0px;background-size: contain;height:500px;padding:100px;position:relative;}
+.hero {background: url(./images/tree-line-1.png) repeat left 0px;background-repeat: repeat-x; background-size: contain;height:500px; padding:100px;position:relative;}
 .hero .overlay {
     top: 0;
     left: 0;
@@ -766,12 +766,12 @@ label.form-label {
         z-index: 100;
     }
 
-    .hero {
+    /* .hero {
         background: url(/static/media/tree-line-1.6a115048.png) no-repeat left 100%;
         height: auto;
         background-size: contain;
         padding: 50px 0 120px;
-    }
+    } */
 
     .hero .box {
         width: 250px;
@@ -821,6 +821,7 @@ label.form-label {
         height: auto;
         padding-top: 0;
         width: 100%;
+        padding-right: 15px;
     }
 
     .amenities .copy-sc {
@@ -1096,12 +1097,12 @@ and (max-device-width : 1024px)  {
         z-index: 100;
     }
 
-    .hero {
+    /* .hero {
         background: url(/static/media/tree-line-1.6a115048.png) no-repeat left 100%;
         height: auto;
         background-size: contain;
         padding: 50px 0 120px;
-    }
+    } */
 
     .hero .box {
         width: 250px;
@@ -1147,6 +1148,7 @@ and (max-device-width : 1024px)  {
         height: auto;
         padding-top: 0;
         width: 100%;
+        padding-right: 15px;
     }
 
     .amenities .copy-sc {
@@ -1180,10 +1182,10 @@ and (max-device-width : 1024px)  {
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     /* .header {background: red;} */
 
-    .hero {
+    /* .hero {
         height: 500px;
         padding: 100px;
-    }
+    } */
 
     .hero .message {
         display: block;
@@ -1259,11 +1261,17 @@ and (max-device-width : 1024px)  {
         top: initial;
     }
 
-    .hero {
+    /* .hero {
         background: url(/static/media/tree-line-1.6a115048.png) no-repeat left 0px;
-        height: 500px;
-        background-size: cover;
-    }
+        /* min-height: 500px; */
+        /* object-fit: fill; */
+        /* height: auto; */
+        /* object-fit: scale-down; */
+        /* max-width: 100%; */
+        /* background-repeat: no-repeat; */
+        /* background-size: cover; */
+
+    /* } */
 
     .hero .message {
         display:none;
