payment form styling

--- a/src/style.css
+++ b/src/style.css
@@ -929,11 +929,10 @@ label.form-label {
         z-index: 5;
         position: relative;
     }
-
   
   .DemoWrapper {
     margin-top: 20px;
-    max-width: 500px;
+    /* max-width: 1000px; */
     display: flex;
     flex-direction: column;
   }
@@ -986,7 +985,7 @@ label.form-label {
   .StripeElement {
     display: block;
     margin: 10px 0 20px 0;
-    width: 500px;
+    min-width: 345px;
     padding: 10px 14px;
     font-size: 1em;
     font-family: "Source Code Pro", monospace;
